--- a/docs/index.css
+++ b/docs/index.css
@@ -17,13 +17,10 @@ p, h4, h3, .content ul {
 }
 
 h1, h2 {
+  line-height: 48px;
   font-size: 32px;
   font-weight: normal;
-  margin: 12px 0 12px 2%;
-}
-
-h1 {
-  float: left;
+  margin: 8px 0 8px 2%;
 }
 
 h3 {
@@ -35,7 +32,7 @@ h4 {
 }
 
 h1, h2, pre, code, .console, .status, #nav, #tagline {
-  font-family: 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', Monaco, Courier, monospace;
+  font-family: 'Droid Sans Mono', 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', Monaco, Courier, monospace;
 }
 
 a:link, a:visited {
@@ -57,6 +54,19 @@ pre, .console {
   font-size: 16px;
   height: 270px;
   color: #dddddd;
+  margin-top: 26px;
+  margin-bottom: 26px;
+  border: 1px solid #888;
+  resize: auto;
+  overflow: auto;
+  padding: 2px;
+}
+
+textarea {
+  width: 100%;
+  display: block;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 #nav {
@@ -68,7 +78,7 @@ pre, .console {
 }
 
 #nav a:link, #nav a:visited {
-  color: #EAF2D9;
+  color: #eaf2d9;
 }
 
 #nav a {
@@ -81,13 +91,13 @@ pre, .console {
 }
 
 #tagline {
-  float: left;
-  margin-left: 10px;
-  margin-top: 24px;
+  position: absolute;
+  display: none;
+  top: 24px;
   font-size: 14px;
 }
 
-pre {
+#guide pre {
   font-size: 16px;
   line-height: 26px;
   color: #dddddd;
@@ -176,15 +186,6 @@ pre {
 .left .col2 {
   width: 46%;
   left: 56%;
-}
-
-textarea {
-  width: 100%;
-  display: block;
-  margin-top: 26px;
-  margin-bottom: 26px;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
 }
 
 .docked {
