A lot of styles and a few layout changes

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,14 @@
-<nav>
+<header>
   <h1><a href="/">DustJS</a></h1>
+  <h2>Asynchronous templating for Node.js and the browser</h2>
+</header>
+<nav>
   <ul>
     <li><a href="/about">About</a></li>
+    <li><a href="/guides/getting-started">Getting Started</a></li>
     <li><a href="/guides">Guides</a></li>
     <li><a href="/docs">Documentation</a></li>
     <li><a href="https://github.com/linkedin/dustjs">Contributing</a></li>
+    <li><a class="nav-button" href="">Download</a></li>
   </ul>
 </nav>
