--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,207 @@
 /* line 2, ../scss/main.scss */
 body {
-  /* [archetype:styleguide:begin] --- medium copy --- */
-  font-size: 13px;
-  line-height: 17px;
+  /* [archetype:styleguide:begin] --- large copy --- */
+  font-size: 16px;
+  line-height: 20px;
   color: #222222;
   font-weight: normal;
-  /* [archetype:styleguide:end]   --- medium copy --- */
+  /* [archetype:styleguide:end]   --- large copy --- */
+  font-family: 'Roboto', sans-serif;
+}
+/* line 6, ../scss/main.scss */
+body ul {
+  list-style: none;
+}
+
+/* line 11, ../scss/main.scss */
+#body {
+  height: 100%;
+  overflow: hidden;
+  *zoom: 1;
+}
+
+/* line 16, ../scss/main.scss */
+header {
+  /* [archetype:styleguide:begin] --- punchcut --- */
+  background: #333333;
+  -webkit-box-shadow: 0 0 43px rgba(0, 0, 0, 0.75) inset;
+  -moz-box-shadow: 0 0 43px rgba(0, 0, 0, 0.75) inset;
+  box-shadow: 0 0 43px rgba(0, 0, 0, 0.75) inset;
+  /* [archetype:styleguide:end]   --- punchcut --- */
+  padding: 40px 90px;
+}
+/* line 20, ../scss/main.scss */
+header h1 {
+  /* [archetype:styleguide:begin] --- xxlarge headline in a punchcut --- */
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 26px;
+  color: white;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75);
+  /* [archetype:styleguide:end]   --- xxlarge headline in a punchcut --- */
+  font-size: 92px;
+  line-height: 100px;
+}
+/* line 24, ../scss/main.scss */
+header h1 a, header h1 a:visited {
+  color: #FFF;
+  text-decoration: none;
+}
+/* line 28, ../scss/main.scss */
+header h1::before {
+  content: '{';
+}
+/* line 31, ../scss/main.scss */
+header h1::after {
+  content: '}';
+}
+/* line 36, ../scss/main.scss */
+header h2 {
+  /* [archetype:styleguide:begin] --- muted medium headline in a punchcut --- */
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 18px;
+  color: white;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75);
+  /* [archetype:styleguide:end]   --- muted medium headline in a punchcut --- */
+}
+
+/* line 41, ../scss/main.scss */
+nav {
+  /* [archetype:styleguide:begin] --- light module --- */
+  background: #eeeeee;
+  /* [archetype:styleguide:end]   --- light module --- */
+  float: left;
+  width: 236px;
+  height: 100%;
+}
+/* line 46, ../scss/main.scss */
+nav ul li {
+  padding: 15px 30px;
+}
+/* line 49, ../scss/main.scss */
+nav ul li a {
+  /* [archetype:styleguide:begin] --- medium muted headline in a module, link in a module --- */
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 18px;
+  color: #0088cc;
+  text-decoration: none;
+  /* [archetype:styleguide:end]   --- medium muted headline in a module, link in a module --- */
+}
+/* line 205, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-0.0.1.pre.3.6ed259b/stylesheets/archetype/util/_styles.scss */
+nav ul li a.hover, nav ul li a:hover, nav ul li a.focus, nav ul li a:focus {
+  text-decoration: underline;
+}
+/* line 52, ../scss/main.scss */
+nav ul li a.nav-button {
+  /* [archetype:styleguide:begin] --- primary button --- */
+  font-weight: bold;
+  border-width: 1px;
+  border-style: solid;
+  cursor: pointer;
+  margin: 0;
+  overflow: visible;
+  text-decoration: none !important;
+  text-align: center;
+  width: auto;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  padding: 0 13px;
+  height: 31px;
+  line-height: 29px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 13px;
+  color: white;
+  background-color: #0074cc;
+  border-color: #1b5480;
+  *zoom: 1;
+  filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF0088CC', endColorstr='#FF0055CC');
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #0088cc), color-stop(100%, #0055cc));
+  background-image: -webkit-linear-gradient(top, #0088cc, #0055cc);
+  background-image: -moz-linear-gradient(top, #0088cc, #0055cc);
+  background-image: -o-linear-gradient(top, #0088cc, #0055cc);
+  background-image: linear-gradient(top, #0088cc, #0055cc);
+  white-space: nowrap;
+  display: -moz-inline-stack;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  zoom: 1;
+  *display: inline;
+  vertical-align: middle;
+  /* [archetype:styleguide:end]   --- primary button --- */
+}
+/* line 205, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-0.0.1.pre.3.6ed259b/stylesheets/archetype/util/_styles.scss */
+nav ul li a.nav-button.hover, nav ul li a.nav-button:hover, nav ul li a.nav-button.focus, nav ul li a.nav-button:focus {
+  background-color: #0055cc;
+  *zoom: 1;
+  filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF0066CC', endColorstr='#FF0033CC');
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #0066cc), color-stop(100%, #0033cc));
+  background-image: -webkit-linear-gradient(top, #0066cc, #0033cc);
+  background-image: -moz-linear-gradient(top, #0066cc, #0033cc);
+  background-image: -o-linear-gradient(top, #0066cc, #0033cc);
+  background-image: linear-gradient(top, #0066cc, #0033cc);
+  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
+}
+/* line 205, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-0.0.1.pre.3.6ed259b/stylesheets/archetype/util/_styles.scss */
+nav ul li a.nav-button.active, nav ul li a.nav-button:active {
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25) inset;
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25) inset;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25) inset;
+}
+/* line 205, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-0.0.1.pre.3.6ed259b/stylesheets/archetype/util/_styles.scss */
+nav ul li a.nav-button.disabled, nav ul li a.nav-button[disabled] {
+  background-color: #0055cc;
+  *zoom: 1;
+  filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF0066CC', endColorstr='#FF0033CC');
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #0066cc), color-stop(100%, #0033cc));
+  background-image: -webkit-linear-gradient(top, #0066cc, #0033cc);
+  background-image: -moz-linear-gradient(top, #0066cc, #0033cc);
+  background-image: -o-linear-gradient(top, #0066cc, #0033cc);
+  background-image: linear-gradient(top, #0066cc, #0033cc);
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  cursor: default;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
+  opacity: 0.6;
+}
+
+/* line 59, ../scss/main.scss */
+#content {
+  margin-left: 10px;
+  float: left;
+  width: 728px;
+  padding: 15px;
+}
+/* line 63, ../scss/main.scss */
+#content h1 {
+  /* [archetype:styleguide:begin] --- xlarge headline --- */
+  font-size: 22px;
+  font-weight: bold;
+  line-height: 24px;
+  color: black;
+  /* [archetype:styleguide:end]   --- xlarge headline --- */
+}
+/* line 67, ../scss/main.scss */
+#content h2 {
+  /* [archetype:styleguide:begin] --- large headline --- */
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 22px;
+  color: black;
+  /* [archetype:styleguide:end]   --- large headline --- */
+}
+/* line 70, ../scss/main.scss */
+#content p {
+  margin-bottom: 12px;
 }
