Getting started guide

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,12 +2,14 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <title>DustJS by linkedin</title>
+  <title>{{ page.title }}</title>
   <link rel="stylesheet" href="/styles/html5reset-1.6.1.css"/>
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/styles/main.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="/bower_components/platform/platform.js"></script>
   <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
+  <link rel="import" href="/bower_components/dust-demo/components/dust-demo.html">
 </head>
