Use polymer and updated dust-demo

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,10 +6,11 @@
   <link rel="stylesheet" href="/styles/html5reset-1.6.1.css"/>
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/styles/main.css"/>
+  <script src="/bower_components/webcomponentsjs/webcomponents.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="/bower_components/platform/platform.js"></script>
   <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <link rel="import" href="/bower_components/dust-demo/components/dust-demo.html">
+  <link rel="import" href="/bower_components/polymer/polymer.html">
+  <link rel="import" href="/bower_components/dust-demo/components/polymer/dust-demo.html">
 </head>
