--- a/styles/main.css
+++ b/styles/main.css
@@ -1,244 +1,288 @@
-/* line 2, ../scss/main.scss */
-body {
-  /* [archetype:styleguide:begin] --- large copy --- */
-  font-size: 16px;
-  line-height: 20px;
-  color: #222222;
-  font-weight: normal;
-  /* [archetype:styleguide:end]   --- large copy --- */
-  font-family: 'Roboto', sans-serif;
+@font-face {
+  font-family: "Dosis Light";
+  src: url('/fonts/../../fonts/dosis-light-webgont.eot');
+  src: url('/fonts/../../fonts/dosis-light-webgont.eot?#iefix') format('embedded-opentype'), url('/fonts/../../fonts/dosis-light-webfont.woff') format('woff'), url('/fonts/../../fonts/dosis-light-webfont.ttf') format('truetype'), url('/fonts/../../fonts/dosis-light-webfont.svg') format('svg');
 }
-/* line 6, ../scss/main.scss */
-body ul {
-  list-style: none;
-}
-
-/* line 11, ../scss/main.scss */
-#body {
-  height: 100%;
-  overflow: hidden;
-  *zoom: 1;
-}
-
-/* line 16, ../scss/main.scss */
-header {
-  /* [archetype:styleguide:begin] --- punchcut --- */
-  background: #333333;
-  -webkit-box-shadow: 0 0 43px rgba(0, 0, 0, 0.75) inset;
-  -moz-box-shadow: 0 0 43px rgba(0, 0, 0, 0.75) inset;
-  box-shadow: 0 0 43px rgba(0, 0, 0, 0.75) inset;
-  /* [archetype:styleguide:end]   --- punchcut --- */
-  padding: 40px 90px;
-}
-/* line 20, ../scss/main.scss */
-header h1 {
-  /* [archetype:styleguide:begin] --- xxlarge headline in a punchcut --- */
-  font-size: 24px;
-  font-weight: bold;
-  line-height: 26px;
-  color: white;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75);
-  /* [archetype:styleguide:end]   --- xxlarge headline in a punchcut --- */
-  font-size: 92px;
-  line-height: 100px;
-  margin-bottom: 10px;
-}
-/* line 25, ../scss/main.scss */
-header h1 a, header h1 a:visited {
-  color: #FFF;
-  text-decoration: none;
-}
-/* line 29, ../scss/main.scss */
-header h1::before {
-  content: '{';
-  padding-right: 15px;
-}
-/* line 33, ../scss/main.scss */
-header h1::after {
-  content: '}';
-  padding-left: 15px;
-}
-/* line 39, ../scss/main.scss */
-header h2 {
-  /* [archetype:styleguide:begin] --- muted medium headline in a punchcut --- */
-  font-size: 16px;
-  font-weight: normal;
-  line-height: 18px;
-  color: white;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75);
-  /* [archetype:styleguide:end]   --- muted medium headline in a punchcut --- */
-}
-
-/* line 44, ../scss/main.scss */
+/* line 1, ../scss/components/_nav.scss */
 nav {
-  /* [archetype:styleguide:begin] --- light module --- */
-  background: #eeeeee;
-  /* [archetype:styleguide:end]   --- light module --- */
-  float: left;
-  width: 236px;
+  -moz-box-shadow: #343434 0 0 5px;
+  -webkit-box-shadow: #343434 0 0 5px;
+  box-shadow: #343434 0 0 5px;
+  width: 253px;
   height: 100%;
+  background: #323232;
+  position: fixed;
 }
-/* line 49, ../scss/main.scss */
-nav ul li {
-  padding: 15px 30px;
+/* line 8, ../scss/components/_nav.scss */
+nav ul.main-nav > li {
+  padding: 10px 0px 0px 72px;
+  color: white;
 }
-/* line 52, ../scss/main.scss */
-nav ul li a {
-  /* [archetype:styleguide:begin] --- medium muted headline in a module, link in a module --- */
+/* line 12, ../scss/components/_nav.scss */
+nav ul.main-nav > li a {
+  /* [archetype:styleguide:begin] --- `medium muted headline in a module, link in a module` --- */
   font-size: 16px;
   font-weight: normal;
   line-height: 18px;
-  color: #0088cc;
+  color: #0088CC;
   text-decoration: none;
-  /* [archetype:styleguide:end]   --- medium muted headline in a module, link in a module --- */
-  color: #666;
+  /* [archetype:styleguide:end] --- `medium muted headline in a module, link in a module` --- */
+  color: #FFF;
 }
-/* line 205, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-0.0.1.pre.3.6ed259b/stylesheets/archetype/util/_styles.scss */
-nav ul li a.hover, nav ul li a:hover, nav ul li a.focus, nav ul li a:focus {
+/* line 193, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
+nav ul.main-nav > li a {
+  /* [archetype:target-os:begin] --- default --- */
+  /* [archetype:target-os:end]   --- default --- */
+}
+/* line 263, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_styles.scss */
+nav ul.main-nav > li a.hover, nav ul.main-nav > li a:hover, nav ul.main-nav > li a.focus, nav ul.main-nav > li a:focus {
   text-decoration: underline;
 }
-/* line 56, ../scss/main.scss */
-nav ul li a.nav-button {
-  /* [archetype:styleguide:begin] --- primary button --- */
-  font-weight: bold;
-  border-width: 1px;
-  border-style: solid;
-  cursor: pointer;
-  margin: 0;
-  overflow: visible;
-  text-decoration: none !important;
-  text-align: center;
-  width: auto;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
-  padding: 0 13px;
-  height: 31px;
-  line-height: 29px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  font-size: 13px;
-  color: white;
-  background-color: #0074cc;
-  border-color: #1b5480;
-  *zoom: 1;
-  filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF0088CC', endColorstr='#FF0055CC');
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #0088cc), color-stop(100%, #0055cc));
-  background-image: -webkit-linear-gradient(top, #0088cc, #0055cc);
-  background-image: -moz-linear-gradient(top, #0088cc, #0055cc);
-  background-image: -o-linear-gradient(top, #0088cc, #0055cc);
-  background-image: linear-gradient(top, #0088cc, #0055cc);
-  white-space: nowrap;
-  display: -moz-inline-stack;
-  display: inline-block;
-  vertical-align: middle;
-  *vertical-align: auto;
-  zoom: 1;
-  *display: inline;
-  vertical-align: middle;
-  /* [archetype:styleguide:end]   --- primary button --- */
+/* line 17, ../scss/components/_nav.scss */
+nav ul.main-nav > li > ul > li {
+  padding-left: 10px;
 }
-/* line 205, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-0.0.1.pre.3.6ed259b/stylesheets/archetype/util/_styles.scss */
-nav ul li a.nav-button.hover, nav ul li a.nav-button:hover, nav ul li a.nav-button.focus, nav ul li a.nav-button:focus {
-  background-color: #0055cc;
-  *zoom: 1;
-  filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF0066CC', endColorstr='#FF0033CC');
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #0066cc), color-stop(100%, #0033cc));
-  background-image: -webkit-linear-gradient(top, #0066cc, #0033cc);
-  background-image: -moz-linear-gradient(top, #0066cc, #0033cc);
-  background-image: -o-linear-gradient(top, #0066cc, #0033cc);
-  background-image: linear-gradient(top, #0066cc, #0033cc);
-  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
-}
-/* line 205, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-0.0.1.pre.3.6ed259b/stylesheets/archetype/util/_styles.scss */
-nav ul li a.nav-button.active, nav ul li a.nav-button:active {
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25) inset;
-  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25) inset;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25) inset;
-}
-/* line 205, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-0.0.1.pre.3.6ed259b/stylesheets/archetype/util/_styles.scss */
-nav ul li a.nav-button.disabled, nav ul li a.nav-button[disabled] {
-  background-color: #0055cc;
-  *zoom: 1;
-  filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF0066CC', endColorstr='#FF0033CC');
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #0066cc), color-stop(100%, #0033cc));
-  background-image: -webkit-linear-gradient(top, #0066cc, #0033cc);
-  background-image: -moz-linear-gradient(top, #0066cc, #0033cc);
-  background-image: -o-linear-gradient(top, #0066cc, #0033cc);
-  background-image: linear-gradient(top, #0066cc, #0033cc);
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  cursor: default;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
-  opacity: 0.6;
-}
-/* line 61, ../scss/main.scss */
-nav ul li label {
-  color: #666;
+/* line 21, ../scss/components/_nav.scss */
+nav ul.main-nav > li label {
+  color: #a5a5a5;
   cursor: pointer;
 }
-/* line 65, ../scss/main.scss */
-nav ul li label:hover {
+/* line 25, ../scss/components/_nav.scss */
+nav ul.main-nav > li label:hover {
   text-decoration: underline;
 }
-/* line 73, ../scss/main.scss */
-nav ul li.sub input {
+/* line 33, ../scss/components/_nav.scss */
+nav ul.main-nav > li.sub input {
   position: absolute !important;
   height: 1px;
   width: 1px;
   overflow: hidden;
-  /* [archetype:target-browser:being] --- ie lte 7 --- */
-  *clip: rect(1px 1px 1px 1px);
-  /* [archetype:target-browser:end]   --- ie lte 7 --- */
+  /* [archetype:target:browser:begin] --- ie lte 7 --- */
+  _clip: rect(1px 1px 1px 1px);
+  /* [archetype:target:browser:end]   --- ie lte 7 --- */
   clip: rect(1px, 1px, 1px, 1px);
 }
-/* line 164, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-0.0.1.pre.3.6ed259b/stylesheets/archetype/util/_targeting.scss */
-.ie.lte7 nav ul li.sub input {
-  /* [archetype:target-browser:begin] --- ie lte 7 --- */
-  /* [archetype:target-browser:end]   --- ie lte 7 --- */
+/* line 157, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
+.ie.lte7 nav ul.main-nav > li.sub input {
+  /* [archetype:target:browser:begin] --- ie lte 7 --- */
+  /* [archetype:target:browser:end]   --- ie lte 7 --- */
 }
-/* line 76, ../scss/main.scss */
-nav ul li.sub input:checked ~ ul {
+/* line 36, ../scss/components/_nav.scss */
+nav ul.main-nav > li.sub input:checked ~ ul {
   display: block;
 }
-/* line 81, ../scss/main.scss */
-nav ul li.sub ul {
+/* line 39, ../scss/components/_nav.scss */
+nav ul.main-nav > li.sub input:checked ~ ul li {
+  padding-left: 10px;
+}
+/* line 45, ../scss/components/_nav.scss */
+nav ul.main-nav > li.sub ul {
   display: none;
 }
 
-/* line 88, ../scss/main.scss */
+/* line 2, ../scss/components/_header.scss */
+header h1 {
+  font-family: "Dosis Light";
+  font-size: 48px;
+  line-height: 50px;
+  margin: 34px 0px 34px 0px;
+  padding: 0px 32px;
+}
+/* line 8, ../scss/components/_header.scss */
+header h1 a, header h1 a:visited {
+  color: #FFF;
+  text-decoration: none;
+}
+/* line 14, ../scss/components/_header.scss */
+header h2.tagline {
+  font-family: "Dosis Light";
+  position: absolute;
+  width: 796px;
+  top: 74px;
+  left: 300px;
+  font-size: 32px;
+  color: #323232;
+}
+
+/* line 2, ../scss/components/_content.scss */
 #content {
   margin-left: 10px;
   float: left;
+  margin-left: 297px;
+  margin-right: 297px;
+  *zoom: 1;
+  position: relative;
   width: 728px;
-  padding: 15px;
+  -moz-box-shadow: #939393 0 0 3px;
+  -webkit-box-shadow: #939393 0 0 3px;
+  box-shadow: #939393 0 0 3px;
+  background: #FFF;
+  padding: 34px;
+  margin-top: 142px;
 }
-/* line 92, ../scss/main.scss */
+/* line 9, ../scss/components/_content.scss */
+#content h1, #content h2, #content p, #content pre {
+  margin-bottom: 32px;
+}
+/* line 13, ../scss/components/_content.scss */
+#content p:last-child {
+  margin-bottom: 47px;
+}
+/* line 17, ../scss/components/_content.scss */
 #content h1 {
-  /* [archetype:styleguide:begin] --- xlarge headline --- */
+  /* [archetype:styleguide:begin] --- `xlarge headline` --- */
   font-size: 22px;
   font-weight: bold;
   line-height: 24px;
   color: black;
-  /* [archetype:styleguide:end]   --- xlarge headline --- */
+  /* [archetype:styleguide:end] --- `xlarge headline` --- */
+  font-size: 28px;
 }
-/* line 96, ../scss/main.scss */
+/* line 193, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
+#content h1 {
+  /* [archetype:target-os:begin] --- default --- */
+  /* [archetype:target-os:end]   --- default --- */
+}
+/* line 22, ../scss/components/_content.scss */
 #content h2 {
-  /* [archetype:styleguide:begin] --- large headline --- */
+  /* [archetype:styleguide:begin] --- `large headline` --- */
   font-size: 18px;
   font-weight: bold;
   line-height: 22px;
   color: black;
-  /* [archetype:styleguide:end]   --- large headline --- */
+  /* [archetype:styleguide:end] --- `large headline` --- */
+  font-size: 20px;
 }
-/* line 99, ../scss/main.scss */
-#content p {
-  margin-bottom: 12px;
+/* line 193, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
+#content h2 {
+  /* [archetype:target-os:begin] --- default --- */
+  /* [archetype:target-os:end]   --- default --- */
+}
+/* line 27, ../scss/components/_content.scss */
+#content h3 {
+  font-size: 18px;
+  margin-bottom: 32px;
+  margin-top: 16px;
+  color: #7f7f7f;
+}
+/* line 34, ../scss/components/_content.scss */
+#content h4 {
+  font-size: 16px;
+  margin-bottom: 24px;
+  margin-top: 16px;
+  color: #7f7f7f;
+}
+/* line 41, ../scss/components/_content.scss */
+#content h1, #content h2 {
+  border-bottom-width: 3px;
+  border-style: solid;
+  border-color: #7f7f7f;
+  color: #323232;
+  padding-bottom: 15px;
+}
+/* line 47, ../scss/components/_content.scss */
+#content code {
+  color: #00698c;
+}
+/* line 51, ../scss/components/_content.scss */
+#content a {
+  color: #267f9d;
+  text-decoration: none;
+}
+/* line 56, ../scss/components/_content.scss */
+#content pre {
+  -moz-box-shadow: inset 0 0 3px #939393;
+  -webkit-box-shadow: inset 0 0 3px #939393;
+  box-shadow: inset 0 0 3px #939393;
+  overflow-x: scroll;
+  background: #dddddd;
+  color: #00698c;
+  padding: 15px;
+}
+/* line 64, ../scss/components/_content.scss */
+#content #parameters + ul > li > ul {
+  -moz-box-shadow: inset 0 0 3px #939393;
+  -webkit-box-shadow: inset 0 0 3px #939393;
+  box-shadow: inset 0 0 3px #939393;
+  background: #dddddd;
+  padding: 15px;
+  margin-bottom: 32px;
+  margin-top: 32px;
+}
+/* line 71, ../scss/components/_content.scss */
+#content #parameters + ul > li > ul > li > ul {
+  margin: 32px 0px 32px 0px;
+}
+/* line 73, ../scss/components/_content.scss */
+#content #parameters + ul > li > ul > li > ul > li {
+  margin: 16px 0px 32px 0px;
+  color: #323232;
+  font-size: 16px;
+}
+/* line 77, ../scss/components/_content.scss */
+#content #parameters + ul > li > ul > li > ul > li > ul {
+  padding: 15px;
+  margin-top: 15px;
+  background: #eeeeee;
+  color: #323232;
+  font-size: 14px;
+}
+/* line 83, ../scss/components/_content.scss */
+#content #parameters + ul > li > ul > li > ul > li > ul > li {
+  color: #7f7f7f;
+  margin-top: 10px;
+}
+/* line 86, ../scss/components/_content.scss */
+#content #parameters + ul > li > ul > li > ul > li > ul > li:first-child {
+  margin-top: 0px;
+}
+/* line 89, ../scss/components/_content.scss */
+#content #parameters + ul > li > ul > li > ul > li > ul > li > ul {
+  padding-left: 15px;
+  color: #323232;
+}
+
+/* line 1, ../scss/components/_footer.scss */
+hr {
+  margin-top: 34px;
+}
+
+/* line 5, ../scss/components/_footer.scss */
+footer {
+  margin-left: 10px;
+  float: left;
+  margin-left: 297px;
+  margin-right: 297px;
+  *zoom: 1;
+  position: relative;
+  width: 728px;
+  font-family: "Dosis Light";
+  padding: 17px 34px 34px 34px;
+}
+
+/* line 23, ../scss/main.scss */
+html {
+  height: 100%;
+}
+
+/* line 27, ../scss/main.scss */
+body {
+  /* [archetype:styleguide:begin] --- `large copy` --- */
+  font-size: 16px;
+  line-height: 20px;
+  color: #222222;
+  font-weight: normal;
+  /* [archetype:styleguide:end] --- `large copy` --- */
+  height: 100%;
+  background: #dddddd;
+  font-family: 'Roboto', sans-serif;
+}
+/* line 33, ../scss/main.scss */
+body ul {
+  list-style: none;
+}
+
+/* line 39, ../scss/main.scss */
+#body {
+  overflow: hidden;
 }
