Quick CSS polish
Mostly adjustments to padding and spacing of the nag to prevent wrapping as much as possible.

--- a/scss/components/_content.scss
+++ b/scss/components/_content.scss
@@ -55,7 +55,7 @@
 
   pre {
     @include interior-shadow($light-shadow, $shadow-small-size);
-    overflow-x: scroll;
+    overflow-x: auto;
     background: $brand-neutral;
     color: $brand-blue;
     padding: $pre-padding;
