--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -7,12 +7,12 @@ $content-columns: 18;
 ///////////
 //Widths //
 ///////////
-$nav-width: 253px;;
+$nav-width: 205px;
 
 ////////////
 //Indents //
 ////////////
-$nav-indent: 72px;
+$nav-indent: 24px;
 $nav-sub-indent: 10px;
 $content-indent: 65px;
 
@@ -20,14 +20,14 @@ $content-indent: 65px;
 //Margins //
 ////////////
 $header-margin-bottom: 34px;
-$content-margin-top: 142px;
+$content-margin-top: 122px;
 $content-h1-margin-bottom: 32px;
 $nested-api-list-margin-top: 15px;
 
 //////////////
 //Positions //
 //////////////
-$tagline-position-top: 74px;
+$tagline-position-top: 36px;
 $tagline-position-left: 300px;
 
 /////////////
