--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -3,8 +3,8 @@ header {
     @include Dosis-light();
     font-size: 48px;
     line-height: 50px;
-    margin: $header-margin-bottom 0px $header-margin-bottom 0px;
-    padding: 0px ($nav-indent - $brand-button-padding * 2);
+    margin: $header-margin-bottom 0px;
+    padding: 0;
     a, a:visited {
       color: #FFF;
       text-decoration: none;
@@ -18,6 +18,7 @@ header {
     top: $tagline-position-top;
     left: $tagline-position-left;
     font-size: $tagline-font-size;
+    line-height: $tagline-font-size * 1.5;
     color: $brand-graphite;
   }
 }
