--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -4,46 +4,50 @@ nav {
   height: 100%;
   background: $brand-graphite;
   position: fixed;
+  padding: 0 $nav-indent;
 
-  ul.main-nav > li {
-    padding: 10px 0px 0px $nav-indent;
-    color: white;
+  ul.main-nav {
+    > li {
+      line-height: 26px;
+      padding: 0;
+      color: white;
 
-    a {
-      @include styleguide(medium muted headline in a module, link in a module);
-      color: #FFF;
-    }
-
-    & > ul > li {
-      padding-left: $nav-sub-indent;
-    }
-
-    label {
-      color: tint($brand-light-graphite, 30%);
-      cursor: pointer;
-
-      &:hover {
-        text-decoration: underline;
-
+      a {
+        @include styleguide(medium muted headline in a module, link in a module);
+        color: #FFF;
       }
-    }
 
-    &.sub {
+      li {
+        padding-left: $nav-sub-indent;
+      }
 
-      input {
-        @include hide-element();
+      label {
+        color: tint($brand-light-graphite, 30%);
+        cursor: pointer;
 
-        &:checked ~ ul {
-          display: block;
+        &:hover {
+          text-decoration: underline;
 
-          li {
-            padding-left: $nav-sub-indent;
-          }
         }
       }
 
-      ul {
-        display: none;
+      &.sub {
+
+        input {
+          @include hide-element();
+
+          &:checked ~ ul {
+            display: block;
+
+            li {
+              padding-left: $nav-sub-indent;
+            }
+          }
+        }
+
+        ul {
+          display: none;
+        }
       }
     }
   }
