--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -9,8 +9,10 @@ nav {
   ul.main-nav {
     > li {
       line-height: 26px;
+      margin-bottom: 1em;
       padding: 0;
-      color: white;
+      color: #999;
+      cursor: default;
 
       a {
         @include styleguide(medium muted headline in a module, link in a module);
