--- a/styles/main.css
+++ b/styles/main.css
@@ -33,12 +33,12 @@ nav ul.main-nav > li a {
   /* [archetype:styleguide:end] --- `medium muted headline in a module, link in a module` --- */
   color: #FFF;
 }
-/* line 193, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.5/stylesheets/archetype/util/_targeting.scss */
+/* line 193, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
 nav ul.main-nav > li a {
   /* [archetype:target-os:begin] --- default --- */
   /* [archetype:target-os:end]   --- default --- */
 }
-/* line 263, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.5/stylesheets/archetype/util/_styles.scss */
+/* line 263, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_styles.scss */
 nav ul.main-nav > li a.hover, nav ul.main-nav > li a:hover, nav ul.main-nav > li a.focus, nav ul.main-nav > li a:focus {
   text-decoration: underline;
 }
@@ -66,7 +66,7 @@ nav ul.main-nav > li.sub input {
   /* [archetype:target:browser:end]   --- ie lte 7 --- */
   clip: rect(1px, 1px, 1px, 1px);
 }
-/* line 157, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.5/stylesheets/archetype/util/_targeting.scss */
+/* line 157, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
 .ie.lte7 nav ul.main-nav > li.sub input {
   /* [archetype:target:browser:begin] --- ie lte 7 --- */
   /* [archetype:target:browser:end]   --- ie lte 7 --- */
@@ -126,7 +126,7 @@ header h2.tagline {
   margin-top: 122px;
 }
 /* line 9, ../scss/components/_content.scss */
-#content h1, #content h2, #content p, #content pre, #content ul {
+#content > h1, #content > h2, #content > p, #content > pre, #content > ul {
   margin-bottom: 32px;
 }
 /* line 13, ../scss/components/_content.scss */
@@ -138,7 +138,7 @@ header h2.tagline {
   margin-bottom: 47px;
 }
 /* line 21, ../scss/components/_content.scss */
-#content h1 {
+#content > h1 {
   /* [archetype:styleguide:begin] --- `xlarge headline` --- */
   font-size: 22px;
   font-weight: bold;
@@ -147,13 +147,13 @@ header h2.tagline {
   /* [archetype:styleguide:end] --- `xlarge headline` --- */
   font-size: 28px;
 }
-/* line 193, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.5/stylesheets/archetype/util/_targeting.scss */
-#content h1 {
+/* line 193, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
+#content > h1 {
   /* [archetype:target-os:begin] --- default --- */
   /* [archetype:target-os:end]   --- default --- */
 }
 /* line 26, ../scss/components/_content.scss */
-#content h2 {
+#content > h2 {
   /* [archetype:styleguide:begin] --- `large headline` --- */
   font-size: 18px;
   font-weight: bold;
@@ -162,27 +162,27 @@ header h2.tagline {
   /* [archetype:styleguide:end] --- `large headline` --- */
   font-size: 20px;
 }
-/* line 193, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.5/stylesheets/archetype/util/_targeting.scss */
-#content h2 {
+/* line 193, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
+#content > h2 {
   /* [archetype:target-os:begin] --- default --- */
   /* [archetype:target-os:end]   --- default --- */
 }
 /* line 31, ../scss/components/_content.scss */
-#content h3 {
+#content > h3 {
   font-size: 18px;
   margin-bottom: 32px;
   margin-top: 16px;
   color: #7f7f7f;
 }
 /* line 38, ../scss/components/_content.scss */
-#content h4 {
+#content > h4 {
   font-size: 16px;
   margin-bottom: 24px;
   margin-top: 16px;
   color: #7f7f7f;
 }
 /* line 45, ../scss/components/_content.scss */
-#content h1, #content h2 {
+#content > h1, #content > h2 {
   border-bottom-width: 3px;
   border-style: solid;
   border-color: #7f7f7f;
@@ -217,7 +217,7 @@ header h2.tagline {
   text-decoration: none;
 }
 /* line 75, ../scss/components/_content.scss */
-#content pre {
+#content > pre {
   -moz-box-shadow: inset 0 0 3px #939393;
   -webkit-box-shadow: inset 0 0 3px #939393;
   box-shadow: inset 0 0 3px #939393;
