--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,3 @@
 <hr>
 <footer id="footer">&copy; LinkedIn 2015</footer>
+<div id="forkongithub"><a href="https://github.com/linkedin/dustjs">Fork me on GitHub</a></div>
