--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -7,3 +7,43 @@ footer {
   @include Dosis-light();
   padding: $content-padding/2 $content-padding $content-padding $content-padding;
 }
+
+
+#forkongithub{
+  position:fixed;
+  top:0;
+  right:0;
+  width:200px;
+  overflow:hidden;
+  height:200px;
+  z-index:9999;
+}
+#forkongithub a{
+  background:#323232;
+  color:#fff;
+  text-decoration:none;
+  font-family:arial,sans-serif;
+  text-align:center;
+  font-weight:bold;
+  padding:5px 40px;
+  font-size:1rem;
+  line-height:2rem;
+  width:200px;
+  position:absolute;
+  top:60px;
+  right:-60px;
+  -webkit-transform:rotate(45deg);
+  -ms-transform:rotate(45deg);
+  -moz-transform:rotate(45deg);
+  -o-transform:rotate(45deg);
+  transform:rotate(45deg);
+  box-shadow:4px 4px 10px rgba(0,0,0,0.8);
+  border-top: 1px solid #FFF;
+  border-bottom: 1px solid #FFF;
+}
+
+@media screen and (max-width:800px){
+  #forkongithub{
+    display:none;
+  }
+}
