--- a/styles/main.css
+++ b/styles/main.css
@@ -8,10 +8,10 @@ nav {
   -moz-box-shadow: #343434 0 0 5px;
   -webkit-box-shadow: #343434 0 0 5px;
   box-shadow: #343434 0 0 5px;
-  width: 205px;
+  position: absolute;
   height: 100%;
+  width: 205px;
   background: #323232;
-  position: fixed;
   padding: 0 24px;
 }
 /* line 10, ../scss/components/_nav.scss */
@@ -33,12 +33,12 @@ nav ul.main-nav > li a {
   /* [archetype:styleguide:end] --- `medium muted headline in a module, link in a module` --- */
   color: #FFF;
 }
-/* line 193, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
+/* line 193, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
 nav ul.main-nav > li a {
   /* [archetype:target-os:begin] --- default --- */
   /* [archetype:target-os:end]   --- default --- */
 }
-/* line 263, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_styles.scss */
+/* line 263, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_styles.scss */
 nav ul.main-nav > li a.hover, nav ul.main-nav > li a:hover, nav ul.main-nav > li a.focus, nav ul.main-nav > li a:focus {
   text-decoration: underline;
 }
@@ -66,7 +66,7 @@ nav ul.main-nav > li.sub input {
   /* [archetype:target:browser:end]   --- ie lte 7 --- */
   clip: rect(1px, 1px, 1px, 1px);
 }
-/* line 157, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
+/* line 157, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
 .ie.lte7 nav ul.main-nav > li.sub input {
   /* [archetype:target:browser:begin] --- ie lte 7 --- */
   /* [archetype:target:browser:end]   --- ie lte 7 --- */
@@ -102,7 +102,7 @@ header h2.tagline {
   font-family: "Dosis Light";
   position: absolute;
   width: 796px;
-  top: 36px;
+  top: 35px;
   left: 300px;
   font-size: 32px;
   line-height: 48px;
@@ -147,7 +147,7 @@ header h2.tagline {
   /* [archetype:styleguide:end] --- `xlarge headline` --- */
   font-size: 28px;
 }
-/* line 193, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
+/* line 193, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
 #content > h1 {
   /* [archetype:target-os:begin] --- default --- */
   /* [archetype:target-os:end]   --- default --- */
@@ -162,7 +162,7 @@ header h2.tagline {
   /* [archetype:styleguide:end] --- `large headline` --- */
   font-size: 20px;
 }
-/* line 193, ../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
+/* line 193, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/archetype-1.0.0.alpha.4/stylesheets/archetype/util/_targeting.scss */
 #content > h2 {
   /* [archetype:target-os:begin] --- default --- */
   /* [archetype:target-os:end]   --- default --- */
@@ -227,26 +227,55 @@ header h2.tagline {
   padding: 15px;
 }
 /* line 83, ../scss/components/_content.scss */
+#content > .highlighter-coderay {
+  margin-bottom: 32px;
+}
+/* line 85, ../scss/components/_content.scss */
+#content > .highlighter-coderay > .CodeRay > .code {
+  -moz-box-shadow: inset 0 0 3px #939393;
+  -webkit-box-shadow: inset 0 0 3px #939393;
+  box-shadow: inset 0 0 3px #939393;
+  overflow-x: auto;
+  padding: 15px;
+  background: #dddddd;
+}
+/* line 90, ../scss/components/_content.scss */
+#content > .highlighter-coderay > .CodeRay > .code > pre > span.line-numbers > a {
+  margin-right: 10px;
+  color: #787878;
+}
+/* line 99, ../scss/components/_content.scss */
+#content #parameters + ul {
+  list-style: none;
+  margin-left: 0;
+}
+/* line 102, ../scss/components/_content.scss */
+#content #parameters + ul ul {
+  list-style: none;
+  margin-left: 0;
+}
+/* line 107, ../scss/components/_content.scss */
 #content #parameters + ul > li > ul {
   -moz-box-shadow: inset 0 0 3px #939393;
   -webkit-box-shadow: inset 0 0 3px #939393;
   box-shadow: inset 0 0 3px #939393;
+  list-style: none;
   background: #dddddd;
   padding: 15px;
   margin-bottom: 32px;
   margin-top: 32px;
 }
-/* line 90, ../scss/components/_content.scss */
+/* line 114, ../scss/components/_content.scss */
 #content #parameters + ul > li > ul > li > ul {
   margin: 32px 0px 32px 0px;
 }
-/* line 92, ../scss/components/_content.scss */
+/* line 116, ../scss/components/_content.scss */
 #content #parameters + ul > li > ul > li > ul > li {
   margin: 16px 0px 32px 0px;
   color: #323232;
   font-size: 16px;
 }
-/* line 96, ../scss/components/_content.scss */
+/* line 120, ../scss/components/_content.scss */
 #content #parameters + ul > li > ul > li > ul > li > ul {
   padding: 15px;
   margin-top: 15px;
@@ -254,16 +283,16 @@ header h2.tagline {
   color: #323232;
   font-size: 14px;
 }
-/* line 102, ../scss/components/_content.scss */
+/* line 126, ../scss/components/_content.scss */
 #content #parameters + ul > li > ul > li > ul > li > ul > li {
   color: #7f7f7f;
   margin-top: 10px;
 }
-/* line 105, ../scss/components/_content.scss */
+/* line 129, ../scss/components/_content.scss */
 #content #parameters + ul > li > ul > li > ul > li > ul > li:first-child {
   margin-top: 0px;
 }
-/* line 108, ../scss/components/_content.scss */
+/* line 132, ../scss/components/_content.scss */
 #content #parameters + ul > li > ul > li > ul > li > ul > li > ul {
   padding-left: 15px;
   color: #323232;
@@ -288,11 +317,6 @@ footer {
 }
 
 /* line 23, ../scss/main.scss */
-html {
-  height: 100%;
-}
-
-/* line 27, ../scss/main.scss */
 body {
   /* [archetype:styleguide:begin] --- `large copy` --- */
   font-size: 16px;
@@ -300,12 +324,12 @@ body {
   color: #222222;
   font-weight: normal;
   /* [archetype:styleguide:end] --- `large copy` --- */
-  height: 100%;
   background: #dddddd;
   font-family: 'Roboto', sans-serif;
 }
 
-/* line 34, ../scss/main.scss */
+/* line 29, ../scss/main.scss */
 #body {
+  position: relative;
   overflow: hidden;
 }
